criacao branch murilo

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -79,7 +79,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 15,
       "id": "27ee462a",
       "metadata": {},
       "outputs": [
@@ -761,7 +761,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 16,
       "id": "82607d38",
       "metadata": {},
       "outputs": [
@@ -933,7 +933,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 17,
       "id": "60c97750",
       "metadata": {},
       "outputs": [
@@ -1036,7 +1036,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 18,
       "id": "c8263ade",
       "metadata": {},
       "outputs": [
@@ -1443,6 +1443,57 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "2b31bae0",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "import pandas as pd\n",
+        "import mysql.connector\n",
+        "\n",
+        "# Conexão com o banco de dados\n",
+        "connection = mysql.connector.connect(\n",
+        "    host='192.168.196.63',\n",
+        "    user='root',\n",
+        "    password='ABC!abc123',\n",
+        "    database='projeto1'\n",
+        ")\n",
+        "\n",
+        "# query para buscar produção por estabelecimento\n",
+        "query = \"\"\"\n",
+        "SELECT \n",
+        "    \n",
+        "\n",
+        "\"\"\"\n",
+        "\n",
+        "# Carregar os dados em um DataFrame\n",
+        "cursor = connection.cursor(dictionary=True)\n",
+        "cursor.execute(query)\n",
+        "data = cursor.fetchall()\n",
+        "df = pd.DataFrame(data)\n",
+        "\n",
+        "sns.set_theme(style=\"whitegrid\")\n",
+        "\n",
+        "plt.figure(figsize=(14, 8))\n",
+        "grafico = sns.barplot(data=df, x='Idade', y='TotalProcedimentos', hue='Procedimento', palette='viridis')\n",
+        "\n",
+        "grafico.set_title('Os 10 procedimentos mais realizados e suas respectivas idades em Santa Rosa, Ijui e Santo Ângelo', fontsize=16)\n",
+        "grafico.set_xlabel('Idade', fontsize=12)\n",
+        "grafico.set_ylabel('Total de Procedimentos', fontsize=12)\n",
+        "plt.legend(title='Procedimento', title_fontsize=12, bbox_to_anchor=(1.05, 1), loc='upper left')\n",
+        "\n",
+        "plt.tight_layout()\n",
+        "plt.show()\n",
+        "\n",
+        "# Fechar a conexão com o banco de dados\n",
+        "cursor.close()\n",
+        "connection.close()"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -1467,7 +1518,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 19,
       "id": "2f3f31c9",
       "metadata": {},
       "outputs": [],
@@ -1586,12 +1637,7 @@
         "- Scripts/consultas utilizados (colar ou anexar em arquivos separados).\n",
         "- Glossário de termos e siglas (SUS, UBS, CID, etc).\n",
         "\n",
-        "---\n",
-        "\n",
-        "### Instruções finais para uso\n",
-        "1. Este notebook foi gerado sem código propositadamente. Cole aqui as tabelas/figuras exportadas pelas suas análises (PNG, SVG, tabelas HTML ou imagens).\n",
-        "2. Para apresentação, exporte este notebook para PDF ou use-o dentro de um repositório com os artefatos gerados.\n",
-        "3. Se desejar, posso transformar este layout em um notebook que contenha células de código (Python / SQL) para executar diretamente as consultas e gerar gráficos automaticamente — me diga se quer isso.\n"
+        "---\n"
       ]
     }
   ],
